<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/button_staircase_up"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/staircase_image"
        android:padding="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_stairs_up"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@id/button_staircase_up_and_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_staircase_up_and_down"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/staircase_image"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_stairs_up_and_down"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@id/button_staircase_down"
        app:layout_constraintStart_toEndOf="@id/button_staircase_up"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_staircase_down"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/staircase_image"
        android:padding="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_stairs_down"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_staircase_up_and_down"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_start"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_for_start_input"
        app:layout_constraintStart_toStartOf="@id/button_staircase_up"
        app:layout_constraintTop_toBottomOf="@id/button_staircase_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_for_end_input"
        app:layout_constraintStart_toStartOf="@id/input_start"
        app:layout_constraintTop_toBottomOf="@id/input_start">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_for_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/switch_name"
        app:layout_constraintBottom_toBottomOf="@+id/input_step"
        app:layout_constraintStart_toEndOf="@id/input_step"
        app:layout_constraintTop_toTopOf="@id/input_step"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_step"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/hint_for_switch_input"
        app:layout_constraintStart_toStartOf="@id/input_end"
        app:layout_constraintTop_toBottomOf="@id/input_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_step"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/information_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/information_button"
        android:scaleType="centerInside"
        android:src="@drawable/ic_image_question"
        android:text="@string/information_button"
        app:layout_constraintBottom_toBottomOf="@+id/switch_for_step"
        app:layout_constraintStart_toEndOf="@id/switch_for_step"
        app:layout_constraintTop_toTopOf="@+id/switch_for_step" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/calculate_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintStart_toStartOf="@+id/input_step"
        app:layout_constraintTop_toBottomOf="@id/switch_for_step" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAlignment="textEnd"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/result_of_calculations"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="@id/calculate_button"
        app:layout_constraintEnd_toEndOf="@id/button_staircase_down"
        app:layout_constraintStart_toEndOf="@+id/calculate_button"
        app:layout_constraintTop_toTopOf="@id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>